--- a/home/templates/home/articles.html
+++ b/home/templates/home/articles.html
@@ -430,7 +430,7 @@
 																
 														{% if article.co_authors %}, {{ article.co_authors }} {% endif %}
 													</a></span>
-													<h3><a href="javascript:void(0);">{{ article.article_title }}</a></h3>
+													<h3><a href="{% url 'home:article_detail_view' SLUG=article.article_slug %}">{{ article.article_title }}</a></h3>
 												</div>
 												<div class="sj-description">
 													<p>{{ article.abstract_snippet }}</p>
