--- a/home/templates/home/ijprss.html
+++ b/home/templates/home/ijprss.html
@@ -267,14 +267,7 @@
 											{% comment %} <li><a href="javascript:void(0);"><i class="fa fa-download"></i><span>Download</span></a></li> {% endcomment %}
 										</ul>
 										<figure class="sj-articledetailimg">
-                                            <div class="hero d-flex align-items-center justify-content-center" style="position: relative; background-image: url('{% static 'images/word_astra_jornal_about_us.jpeg' %}'); height: 300px; color: white;">
-                                                <div class="hero-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5);"></div>
-                                                <div class="container text-center her-content" style="position: relative; z-index: 2; text-align: center; padding: 100px 0;">
-                                                    <h1 class="display-6 fw-bold" style="color: white;">International Journal of Public Relations and Social Sciences</h1>
-                                                    <p class="lead">(IJPRSS) Journal</p>
-                                                </div>
-                                            </div>
-											{% comment %} <img src="images/newsarticle-img.jpg" alt="image description"> {% endcomment %}
+                                            <img src="{% static 'images/ijprss.jpeg' %}" alt="image description">
 										</figure>
 										<div class="sj-articledescription sj-sectioninnerspace">
                                             <span>About the Journal: </span>
