--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -216,16 +216,16 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 col-sm-12 col-md-12 col-lg-12">
-							<div class="hero d-flex align-items-center justify-content-center" style="position: relative; background-image: url('{% static 'images/word_astra_jornal_about_us.jpeg' %}'); height: 400px; color: white;">
+							<!-- <div class="hero d-flex align-items-center justify-content-center" style="position: relative; background-image: url('{% static 'images/word_astra_jornal_about_us.jpeg' %}'); height: 400px; color: white;">
 								<div class="hero-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5);"></div>
 								<div class="container text-center her-content" style="position: relative; z-index: 2; text-align: center; padding: 100px 0;">
 									<h1 class="display-5 fw-bold" style="color: white;">Word Astra Journals</h1>
 									<p class="lead">...Advancing knowledge,Elevating Research</p>
 								</div>
-							</div>
-							<!-- <div class="sj-postbook">
-								<div class="sj-frontcover"><img style="height: 552px; width: 100%;" src="{% static 'images/slider/image2.jpeg' %}" alt="image description"></div>
 							</div> -->
+							<div class="sj-postbook">
+								<div class="sj-frontcover"><img style="height: 400px; width: 100%;" src="{% static 'images/astra_journal_banneer.jpeg' %}" alt="image description"></div>
+							</div>
 						</div>
 						<!-- <div class="col-12 col-sm-12 col-md-6 col-lg-6">
 							<div class="sj-bannercontent">
