--- a/home/templates/home/articledetail.html
+++ b/home/templates/home/articledetail.html
@@ -273,7 +273,7 @@
 											<li><a href="javascript:void(0);"><i class="fa fa-download"></i><span>Download</span></a></li>
 										</ul>
 										<figure class="sj-articledetailimg">
-											<img src="images/newsarticle-img.jpg" alt="image description">
+											<img style="height: 400px; width: 100%;" src="{% static 'images/astra_journal_banneer.jpeg' %}" alt="image description">
 										</figure>
 										<div class="sj-articledescription sj-sectioninnerspace">
 											<span class="sj-username"><a href="javascript:void(0);">
