--- a/home/templates/home/journal-detail.html
+++ b/home/templates/home/journal-detail.html
@@ -296,7 +296,7 @@
 									{% if related_articles %}
 									<div class="sj-widget sj-widgetrelatedarticles">
 										<div class="sj-widgetheading">
-											<h3>Related Articles</h3>
+											<h3><b>Related Articles</b></h3>
 										</div>
 										<div class="sj-widgetcontent">
 											<ul>
