--- a/home/templates/home/articledetail.html
+++ b/home/templates/home/articledetail.html
@@ -285,7 +285,7 @@
 											<div class="sj-description">
 												<p>{{ article.article_abstract }}</p>
 												<br>
-												<a class="sj-btn sj-btnactive" href="{{ article.article_file.url }}" download>Download Article</a>
+												<a class="sj-btn sj-btnactive" href="{{ article.article_DOI }}">Download Article</a>
 											</div>
 										</div>
 									</div>
